# stuco_app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  Dockerfile  Makefile  README.md  README.rst  entrypoint  entrypoint.sh  package.json  pyproject.toml  start
.spg/: DockerMakefile  duties.py  spg_metadata.txt
.spg/.docker/: .bashrc  .zshrc
config/: .bumpversion.cfg  coverage.ini  pytest.ini
core/: asgi.py  models.py  settings.py  urls.py  util.py  wsgi.py
core/backends/: __init__.py
core/services/: cognito_idp_service.py  email_service.py
docs/: conf.py  index.rst  installation.rst  modules.rst  usage.rst
file_uploads/: admin.py  forms.py  models.py  multi_upload_util.py  urls.py  views.py
file_uploads/migrations/: 0001_initial.py
file_uploads/templates/file_uploads/: confirm_delete.html  demo_uploads.html  edit.html  index.html  upload_file_form.html
poll/: urls.py  views.py
poll/templates/poll/: create.html  home.html  results.html  vote.html
polls/: urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/poll/: create.html  list.html  results.html  vote.html
static/css/: bootstrap.css  bootstrap.css.map  font-awesome.css  font-awesome.css.map  poll.css
static/js/: dialog.js
static/scss/: README.md  bootstrap.scss  sassdockerfile
stuco_app/: apps.py  urls.py  views.py
stuco_app/cli/: __init__.py  cli.py
stuco_app/cli/commands/: cmd_hello.py
stuco_app/templatetags/: custom_tags.py
templates/: about.html  home.html  messages.html
templates/email_templates/: app_registration_template.html  email_base.html  password_reset_success_template.html  password_reset_template.html
templates/layouts/: base.html
templates/registration/: login.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
